--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -54,6 +54,9 @@ jobs:
         run: |
           bundle exec htmlproofer _site \
             \-\-disable-external \
+            \-\-check-html \
+            \-\-allow-hash-href \
+            \-\-allow-missing-images \
             \-\-ignore-urls "/^http:\/\/127.0.0.1/,/^http:\/\/0.0.0.0/,/^http:\/\/localhost/"
 
       - name: Upload site artifact
