--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -54,10 +54,8 @@ jobs:
         run: |
           bundle exec htmlproofer _site \
             \-\-disable-external \
-            \-\-check-html \
             \-\-allow-hash-href \
-            \-\-allow-missing-images \
-            \-\-ignore-urls "/^http:\/\/127.0.0.1/,/^http:\/\/0.0.0.0/,/^http:\/\/localhost/"
+            \-\-allow-missing-images 
 
       - name: Upload site artifact
         uses: actions/upload-pages-artifact@v3
