--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -50,12 +50,12 @@ jobs:
         env:
           JEKYLL_ENV: "production"
 
-      - name: Test site
-        run: |
-          bundle exec htmlproofer _site \
-            \-\-disable-external \
-            \-\-allow-hash-href \
-            \-\-allow-missing-images 
+#      - name: Test site
+#        run: |
+#          bundle exec htmlproofer _site \
+#            \-\-disable-external \
+#            \-\-allow-hash-href \
+#            \-\-allow-missing-images 
 
       - name: Upload site artifact
         uses: actions/upload-pages-artifact@v3
