--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone:
 
 title: Holaf # the main title
 
-tagline: Breaking Security, \nBuilding Knowledge # it will display as the subtitle
+tagline: Breaking Security, Building Knowledge # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
@@ -34,8 +34,8 @@ github:
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@domain.com # change to your email address
+  name: holaf
+  email: holafaloh@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
     # - https://twitter.com/username # change to your Twitter homepage
